fix for extra height in each section on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,7 @@ body {
 
   .main-container {
     width: 100%;
-    height: 100%;
+    height: auto;
   }
 
   .header {
